kubernetes/hardway/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: kpoc
spec:
  selector:
    app: kubernetespoc
  ports:
  - protocol: TCP
    port: 80
    targetPort: kpoc-port
