kubernetes/hardway/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kpoc-ingress
spec:
  rules:
  - host: kp.cafarelli.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kpoc
          servicePort: 80
